Adding in the admin section code to test out how that is going to work

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/compare
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.initialize=false
+
+spring.mvc.view.prefix: /jsp/
+spring.mvc.view.suffix: .jsp
