--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,15 @@
 			<artifactId>spring-context-support</artifactId>
 			<version>4.3.4.RELEASE</version>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-jasper</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
