--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,5 @@ spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.initialize=false
 
-spring.mvc.view.prefix: /jsp/
+spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
