--- a/pom.xml
+++ b/pom.xml
@@ -89,12 +89,13 @@
 
 		<dependency>
 			<groupId>javax.mail</groupId>
-			<artifactId>mail</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>javax.mail</groupId>
 			<artifactId>javax.mail-api</artifactId>
+			<version>1.5.5</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.5.5</version>
 		</dependency>
 	</dependencies>
 
