--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/compare
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.initialize=false
+
+spring.mail.host = 127.0.0.1
+spring.mail.port = 25
