Adding the basics for the email service and preping

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 app.name=price
 app.filePath = ${user.home}/${app.name}
 
+#todo: /tmp folder?
 logging.file=${app.filePath}/logs/${app.name}.log
 
 server.port = 8080
