--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ app.filePath = ${user.home}/${app.name}
 #todo: /tmp folder?
 logging.file=${app.filePath}/logs/${app.name}.log
 
-server.port = 8080
+server.port = 3826
 management.port = 8080
 server.servlet-path=/${app.name}/api/
 
@@ -21,5 +21,10 @@ spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.initialize=false
 
-spring.mail.host = 127.0.0.1
+spring.mail.host = 192.168.1.130
 spring.mail.port = 25
+
+
+
+#For development purposes
+spring.thymeleaf.cache=false
