--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -10,7 +10,7 @@ spring.jpa.hibernate.show_sql=true
 spring.jpa.show-sql=true
 
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/compare-test
+spring.datasource.url=jdbc:mysql://localhost:3306/test-compare
 
 spring.jpa.database-platform: org.hibernate.dialect.HSQLDialect
 spring.datasource.username=root
