Addressing the delete functionality, transitional functionality doesn't seem to work so I went for a remove individual approach. It wouldn't be too far away from how JPA would do it but it certainly has more lines of code involved.

--- a/src/main/resources/application-production.properties
+++ b/src/main/resources/application-production.properties
@@ -16,7 +16,8 @@ spring.datasource.initialize=false
 spring.mail.host = 192.168.1.130
 spring.mail.port = 25
 
-
+logging.level.org.springframework.web = INFO
+logging.level.org.hibernate = INFO
 
 #For development purposes
 spring.thymeleaf.cache=true
