--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,11 @@ spring.datasource.initialize=false
 spring.mail.host = 127.0.0.1
 spring.mail.port = 25
 
+#logging.level.org.springframework.web = DEBUG
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=TRACE 
 
 
 #For development purposes
