--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,10 +25,10 @@ spring.mail.host = 127.0.0.1
 spring.mail.port = 25
 
 #logging.level.org.springframework.web = DEBUG
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.type=TRACE 
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.use_sql_comments=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.type=TRACE
 
 
 #For development purposes
